2010-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/strings.h: Remove in favor of equivalent newlib file.

2010-12-08  Christian Franke  <franke@computer.org>

	* sec_acl.cc (getacl): Set DEF_CLASS_OBJ permissions to 07 instead
	of 0777.

2010-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::check): Don't generate ENOENT for non-existant
	CYGDRIVE and NETDRIVE paths.  Add comment.

2010-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (get_xp_ifs): Fix counting of idx to return stable interface
	alias names for interfaces with multiple IPv4 addresses.

2010-11-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty_slave::dup): Free path_conv strings
	to avoid memory leak.  Add comment.
	(fhandler_pty_master::dup): Ditto.
	* path.h (path_conv::free_strings): New method.

2010-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (SendARP): Remove.
	* net.cc (get_flags): Set IFF_NOARP flag for PPP and SLIP devices.
	(get_xp_ifs): Unify IFF_BROADCAST setting.  Drop calling SendARP to
	set IFF_NOARP flag.

2010-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Don't use FileNetworkOpenInformation
	on Netapps.  Relax condition for workaround.  Always request size
	information via FileStandardInformation info class in workaround.

2010-11-22  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (NETAPP_IGNORE): Add FILE_PERSISTENT_ACLS.
	(FS_IS_NETAPP_DATAONTAP): Drop test for FILE_PERSISTENT_ACLS.
	(fs_info::update): Set filetype to ntfs in remote case, too.  Fix a
	couple of comments.  Add test for Netapps faking to be FAT.

	* mount.h (IMPLEMENT_FS_FLAG): Simplify definition and usage.

2010-11-22  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (get_ipv4fromreg_ipcnt): Fix debug output.  Only create debug
	output if error is not ERROR_FILE_NOT_FOUND.
	(get_ipv4fromreg): Ditto.

2010-11-18  Corinna Vinschen  <corinna@vinschen.de>
